[package]
name = "sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix-web:
sqlx = { version = "0.5.13", features = [ "runtime-actix-native-tls" , "postgres" ] }
actix-web = "4.1.0"
dotenv = "0.15.0"